--- a/src/components/greetingBot/greetingBot.scss
+++ b/src/components/greetingBot/greetingBot.scss
@@ -1,4 +1,4 @@
-$dark_blue: #47597E;
+$dark_blue: #47597e;
 
 .floatInBottom {
     animation-name: floatInFromBottom;
@@ -6,7 +6,7 @@ $dark_blue: #47597E;
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     bottom: -100%;
     animation-fill-mode: forwards;
-    animation-delay: 1.2s
+    animation-delay: 1.2s;
 }
 
 @keyframes floatInFromBottom {
@@ -36,6 +36,10 @@ $dark_blue: #47597E;
     100% {
         bottom: 0.75rem;
     }
+}
+
+.greetingImage {
+    filter: drop-shadow(2.5px 2.5px 2.5px #666666);
 }
 
 .greeting-box {
